Updated bikes routes (added jwt verification)
