# BikeWorldServer/app/routes/bikes.js
@@ -3,40 +3,48 @@ const router = express.Router();
 const Bike = require('../models/bike'); // get our mongoose model
 const RentalPoint = require('../models/rentalPoint'); // get our mongoose model
 const jwt = require('jsonwebtoken'); // used to create, sign, and verify tokens
+const verifyToken = require('../middleware/auth');
 
 // ---------------------------------------------------------
 // route to add new bike
 // ---------------------------------------------------------
-router.post('', async function(req, res) {
+router.post('', verifyToken, async function(req, res) {
 	res.setHeader('Access-Control-Allow-Origin', '*');
     res.setHeader('Access-Control-Allow-Methods', 'GET, POST, OPTIONS, PUT, PATCH, DELETE');
     res.setHeader('Access-Control-Allow-Headers', 'X-Requested-With,content-type');
     res.setHeader('Access-Control-Allow-Credentials', true);
-
+	console.log("arrived");
     // find the rental Point
 	let bikeAlreadyExists = await Bike.findOne({
 		code: req.body.code
-	}).exec();
+	});
 	
 	// bike already exists
 	if (bikeAlreadyExists) {
 		res.status(409).json({ success: false, message: 'Creation bike failed. Bike already exists.' });
-		return;	//to stop the execution of the function	
+		return;
 	}
 
     //save user in the db
-    const newBike = new Bike({code: req.body.code, model: req.body.model, type: req.body.type, rentalPointName: req.body.rentalPointName, state: true});
-    await newBike.save();
+    const newBike = await Bike.create({
+		code: req.body.code, 
+		model: req.body.model, 
+		type: req.body.type, 
+		rentalPointName: req.body.rentalPointName, 
+		state: true
+	});
 
 	//find the rental Point
 	let rentalPoint = await RentalPoint.findOne({
 		name: req.body.rentalPointName
-	}).exec();
+	});
+
+	// todo add check to rental point
 
 	//add bike from rental Point
 	await RentalPoint.updateOne({'name': rentalPoint.name}, {$set: {'bikeNumber': rentalPoint.bikeNumber + 1}});
 
-	res.status(200).json({
+	res.status(201).json({
 		success: true,
 		message: 'New Bike added!'
 	});
@@ -47,48 +55,64 @@ router.post('', async function(req, res) {
 // ---------------------------------------------------------
 // route to get bikes
 // ---------------------------------------------------------
-router.get('', async function(req, res) {
+router.get('', verifyToken, async function(req, res) {
 	res.setHeader('Access-Control-Allow-Origin', '*');
     res.setHeader('Access-Control-Allow-Methods', 'GET, POST, OPTIONS, PUT, PATCH, DELETE');
     res.setHeader('Access-Control-Allow-Headers', 'X-Requested-With,content-type');
     res.setHeader('Access-Control-Allow-Credentials', true);
 	
 	// get the bikes
-	let bikes = await Bike.find( { }).exec();	
-	res.status(200).json({bikes});
+	let bikes = await Bike.find({ });	
+	res.status(200).json(bikes.map(bike => {
+		return {
+			_id: bike._id,
+			code: bike.code,
+			model: bike.model,
+			type: bike.type,
+			rentalPointName: bike.rentalPointName,
+			state: bike.state
+		}
+	}));
 });
 
 
 // ---------------------------------------------------------
 // route to get bike searched by code
 // ---------------------------------------------------------
-router.get('/code', async function(req, res) {
+router.get('/code', verifyToken, async function(req, res) {
 	res.setHeader('Access-Control-Allow-Origin', '*');
     res.setHeader('Access-Control-Allow-Methods', 'GET, POST, OPTIONS, PUT, PATCH, DELETE');
     res.setHeader('Access-Control-Allow-Headers', 'X-Requested-With,content-type');
     res.setHeader('Access-Control-Allow-Credentials', true);
 	
 	// find the bike
-	let bike = await Bike.findOne( { 'code': req.query.code }).exec();
-	res.status(200).json({bike});
+	let bike = await Bike.findOne( { 'code': req.query.code });
+	res.status(200).json({
+		_id: bike._id,
+		code: bike.code,
+		model: bike.model,
+		type: bike.type,
+		rentalPointName: bike.rentalPointName,
+		state: bike.state
+	});
 });
 
 // ---------------------------------------------------------
 // route to delete bike
 // ---------------------------------------------------------
-router.delete('', async function(req, res) {
+router.delete('', verifyToken, async function(req, res) {
 	res.setHeader('Access-Control-Allow-Origin', '*');
     res.setHeader('Access-Control-Allow-Methods', 'GET, POST, OPTIONS, PUT, PATCH, DELETE');
     res.setHeader('Access-Control-Allow-Headers', 'X-Requested-With,content-type');
     res.setHeader('Access-Control-Allow-Credentials', true);
 	
 	// remove the bike
-	await Bike.deleteOne( { code: req.query.code}).exec();
+	await Bike.deleteOne({ code: req.query.code});
 
 	//find the rental Point
 	let rentalPoint = await RentalPoint.findOne({
 		name: req.query.rentalPointName
-	}).exec();
+	});
 
 	//remove bike from rental Point
 	await RentalPoint.updateOne({'name': rentalPoint.name}, {$set: {'bikeNumber': rentalPoint.bikeNumber - 1}});
@@ -102,7 +126,7 @@ router.delete('', async function(req, res) {
 // ---------------------------------------------------------
 // route to repare bike
 // ---------------------------------------------------------
-router.put('', async function(req, res) {
+router.patch('', verifyToken, async function(req, res) {
 	res.setHeader('Access-Control-Allow-Origin', '*');
     res.setHeader('Access-Control-Allow-Methods', 'GET, POST, OPTIONS, PUT, PATCH, DELETE');
     res.setHeader('Access-Control-Allow-Headers', 'X-Requested-With,content-type, Accept, Origin');
@@ -110,18 +134,18 @@ router.put('', async function(req, res) {
 	
 	// find the bike
 	let bike = await Bike.findOne({
-		name: req.body.code
-	}).exec();
+		code: req.body.code
+	});
 
 	//find the rental Point
 	let rentalPoint = await RentalPoint.findOne({
 		name: req.body.rentalPointName
-	}).exec();
-
-	if(bike.state == true){
+	});
+	
+	if(bike.state){
 		//put bike in reparation
 		await Bike.updateOne({'code': req.body.code}, {$set: {'state': false}});
-
+		
 		//remove bike from rental Point
 		await RentalPoint.updateOne({'name': rentalPoint.name}, {$set: {'bikeNumber': rentalPoint.bikeNumber - 1}});
 
@@ -141,7 +165,6 @@ router.put('', async function(req, res) {
 			message: 'Bike repared!'
 		});
 	}
-
 });
 
 module.exports = router;
